--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="main-container">
-      <!-- <svg width="584" height="362" xmlns="http://www.w3.org/2000/svg">
+      <svg width="584" height="362" xmlns="http://www.w3.org/2000/svg">
         <defs>
           <linearGradient
             x1="100%"
@@ -41,7 +41,7 @@
           fill-rule="evenodd"
           opacity=".05"
         />
-      </svg> -->
+      </svg> 
       <div class="container">
         <div class="top-container">
           <div class="left">
@@ -112,7 +112,7 @@
         </div>
       </div>
 
-      <!-- <svg width="1085" height="673" xmlns="http://www.w3.org/2000/svg">
+      <svg width="1085" height="673" xmlns="http://www.w3.org/2000/svg">
         <defs>
           <linearGradient
             x1="100%"
@@ -134,7 +134,7 @@
           fill-rule="evenodd"
           opacity=".05"
         />
-      </svg> -->
+      </svg> 
     </div>
 
     <div class="attribution">
